[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crossterm"]

[dependencies]
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
termion = { version = "1.5", optional = true }
crossterm = { version = "0.25", optional = true }
serde = { version = "1", optional = true, features = ["derive"]}
sorted-list = "0.2.0"
uuid = { version = "1.1.2", features = ["v4"] }
flexi_logger = "0.23.0"
log = "0.4.17"
minesweeper_engine = {path = "../engine", version = "0.1.0"}


[dev-dependencies]
rand = "0.8"
argh = "0.1"
