[package]
name = "minesweeper_tui_game_view"
version = "1.0.0"
edition = "2021"

[dependencies]
minesweeper_engine = {path = "../engine", version = "1.0.0"}
tui = {path = "../../tui", version = "1.0.0"}
game_actions = {path = "../../game_actions", version = "1.0.0"}
bitflags = "1.3"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
crossterm = { version = "0.25" }
serde = { version = "1.0.144", features = ["derive"] }
sorted-list = "0.2.0"
uuid = { version = "1.1.2", features = ["v4"] }
flexi_logger = "0.23.0"
log = "0.4.17"
serde_yaml = "0.9.11"

[dev-dependencies]
rand = "0.8"
argh = "0.1"